--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -39,6 +39,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.13.1"
+  flutter_native_splash: "^2.3.1"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -94,3 +95,15 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icons/app_icon/app_logo.png"
   min_sdk_android: 21 
+
+flutter_native_splash:
+  color: "#FFFFFF" 
+  image: "assets/icons/app_icon/app_logo.png"
+  android_gravity: fill
+  ios_content_mode: scaleAspectFill
+
+  android_12:
+
+    color: "#FFFFFF"
+    image: "assets/icons/app_icon/app_logo_circle.png"
+
