--- a/backend_api/package.json
+++ b/backend_api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified yet\" && exit 0"
   },
   "keywords": [],
   "author": "",
