--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   easy_localization: ^3.0.8
+  google_mlkit_text_recognition: ^0.15.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
