--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   easy_localization: ^3.0.8
   google_mlkit_text_recognition: ^0.15.0
   image_picker: ^1.2.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
