--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -23,16 +23,17 @@ dependencies:
   # UI Components
   dropdown_search: ^6.0.2
   percent_indicator: ^4.2.5
-  easy_localization: ^3.0.7   # <-- Missing Package Added (Translation)
+     # <-- Missing Package Added (Translation)
 
   # Location & Maps
   geolocator: ^10.1.0
   geocoding: ^2.1.1
-
-  # Camera & ML
-  image_picker: ^1.0.7        # <-- Missing Package Added (Camera)
-  google_mlkit_text_recognition: ^0.11.0 # <-- Missing Package Added (Scanning)
-
+  easy_localization: ^3.0.8
+  google_mlkit_text_recognition: ^0.15.0
+  image_picker: ^1.2.1
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^7.1.4
+  intl: 0.20.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
